Bug 458608 - Defaults button does not reset all settings
Summary: Defaults button does not reset all settings
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_tablet (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-01 18:38 UTC by Nicolas Fella
Modified: 2022-11-08 11:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2022-09-01 18:38:24 UTC
STEPS TO REPRODUCE
1. Change some setting, e.g. the tablet area to a custom size 
2. Click 'Defaults'

OBSERVED RESULT
Area setting stays the same

EXPECTED RESULT
Area setting is reset to 'Fit to output'

SOFTWARE/OS VERSIONS
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 5.15.5-kde

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2022-09-26 22:36:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/1179
Comment 2 Aleix Pol 2022-11-08 09:12:20 UTC
Git commit ce2e096c4fbba39969ef2ea84aafe18893cedab2 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 08/11/2022 at 09:08.
Pushed by apol into branch 'master'.

tablet: Fix the reset button for the outputs view

M  +3    -0    kcms/tablet/inputdevice.h
M  +4    -4    kcms/tablet/kcmtablet.cpp
M  +1    -1    kcms/tablet/kcmtablet.h
M  +1    -1    kcms/tablet/package/contents/ui/RebindButtons.qml
M  +15   -4    kcms/tablet/package/contents/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/commit/ce2e096c4fbba39969ef2ea84aafe18893cedab2
Comment 3 Aleix Pol 2022-11-08 11:16:08 UTC
Git commit 8f5f06fcaf5b77a804308c3c7dc4b16ff80be153 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 08/11/2022 at 11:16.
Pushed by apol into branch 'Plasma/5.26'.

tablet: Fix the reset button for the outputs view


(cherry picked from commit ce2e096c4fbba39969ef2ea84aafe18893cedab2)

M  +3    -0    kcms/tablet/inputdevice.h
M  +4    -4    kcms/tablet/kcmtablet.cpp
M  +1    -1    kcms/tablet/kcmtablet.h
M  +1    -1    kcms/tablet/package/contents/ui/RebindButtons.qml
M  +15   -4    kcms/tablet/package/contents/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/commit/8f5f06fcaf5b77a804308c3c7dc4b16ff80be153