tablet: Fix the reset button for the outputs view

BUG: 458608


(cherry picked from commit ce2e096c4fbba39969ef2ea84aafe18893cedab2)